lots of new stuff.

--- a/Pipfile
+++ b/Pipfile
@@ -16,12 +16,15 @@ future = "*"
 graphviz = "*"
 matplotlib = "*"
 seaborn = "*"
-spacy = "*"
 rise = "*"
 jupyter-contrib-nbextensions = "*"
 transformers = "*"
 ipdb = "*"
 networkx = "*"
+torchtext = "*"
+spacy = "*"
+h5py = "*"
+fastai = "*"
 
 [requires]
 python_version = "3.7"
